Feature/update userdata (#45)
* Update User as User and as Admin

* update swagger
